--- a/hackathon-uk-3.html
+++ b/hackathon-uk-3.html
@@ -394,24 +394,10 @@
                     </div>
                   </div>
 
-                  <div class="row">
-                    <div class="col-md-6 col-md-12">
-                      <a href="http://www.ennomotive.com/">
-                        <img alt="Ennomotive" style="margin: auto auto" class="img-responsive" src="img/sponsors/ennomotive.png"/>
-                      </a>
-                    </div>
-                    <div class="col-md-6 img-container">
-                      <a href="https://contest.creamfinance.com/">
-                        <img alt="Clashing Coders" style="margin: auto auto" class="img-responsive" src="img/sponsors/clashingcoders.png"/>
-                      </a>
-                    </div>
-                  </div>
-
                 </div>
               </div>
             </div>
           </section>
-
 
     <section name="journeys" id="journeys" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
@@ -586,88 +572,33 @@
     </div>
 
 
+    
+     <section name="partners" id="partners" class="content-section text-center">
+            <div style="width: 90%; margin: auto auto;" class="row">
+              <div class="container col-md-8 col-md-offset-2">
+                <h1>Hackathon Partners</h1>
+                <hr/>
+                <br>
+                <br>
+                <div class="container col-md-12">
 
-    <div style="clear: both; width: 100%; height: 300px"></div>
+                  <div class="row">
+                    <div class="col-md-6 col-md-12">
+                      <a href="http://www.ennomotive.com/">
+                        <img alt="Ennomotive" style="margin: auto auto" class="img-responsive" src="img/sponsors/ennomotive.png"/>
+                      </a>
+                    </div>
+                    <div class="col-md-6 img-container">
+                      <a href="https://contest.creamfinance.com/">
+                        <img alt="Clashing Coders" style="margin: auto auto" class="img-responsive" src="img/sponsors/clashingcoders.png"/>
+                      </a>
+                    </div>
+                  </div>
 
-    <div class="container col-lg-8 col-lg-offset-2" style="text-align: center;">
-        <h1>HackTrain Cycle</h1>
-        <hr/>
-
-        <div style="clear: both; width: 100%;"></div>
-    </div>
-
-        <div style="clear: both; width: 100%; height: 20px;"></div>
-
-    <p>
-        <h2 style="text-align: center; width: 100%">
-        The hackathon is only the <i style="color:#219ab3;font-size:1.5em;">beginning of the journey!</i>
-        <br>
-        Check out our the next step - the <i style="color:#219ab3;font-size:1.5em;"> HackTrain Accelerator Programme</i>
-        <br>
-        together with all the <i style="color:#219ab3;font-size:1.5em;"> live trials</i> that the innovators ran!</h2>
-    </p>
-
-
-    <div style="clear: both; width: 100%; height: 100px"></div>
-
-
-    <div class="process-container" id="innovation-process">
-
-        <a style="color: white" href="https://www.youtube.com/watch?v=hPsL7VFP_MQ">
-            <div class="process-item col-lg-4">
-
-                <div class="process-background" style="background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(img/index/hth.jpg);"></div>
-
-                <div class="process-number">
-                    1
                 </div>
-
-                <div class="process-title">
-                    HackTrain Hackathon
-                </div>
-                <div class="process-description">
-                    An immersive 48-hour event that brings together 120 top developers, designers and entrepreneurs from around the world. Participants work throughout a weekend building websites, apps and software that solve problems in the railway industry.
-                </div>
+              </div>
             </div>
-        </a>
-        <a style="color: white" href="https://www.youtube.com/watch?v=2rMCszN8PTU">
-            <div class="process-item col-lg-4">
-
-                <div class="process-background" style="background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(img/index/trials.jpg);"></div>
-
-                <div class="process-number">
-                    2
-                </div>
-
-                <div class="process-title">
-                    RailTech Accelerator
-                </div>
-                <div class="process-description">
-                    We find early-stage technology companies that already solve challenges similar to the ones in rail, but in different industries. We provide them with funding, connections, and an accelerated opportunity to run trials in trains, stations apps and websites.
-                </div>
-            </div>
-        </a>
-        <a style="color: white"href="https://www.youtube.com/watch?v=lFTGZnouRzo">
-            <div class="process-item col-lg-4">
-
-                <div class="process-background" style="background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(img/index/dt2.jpg);"></div>
-
-                <div class="process-number">
-                    3
-                </div>
-
-                <div class="process-title">
-                    Digital Transformation
-                </div>
-                <div class="process-description">
-                    We take successful accelerator trials to the next step through digital transformation projects. By pipelining multiple technologies, and partnering with system integrators, the HackTrain delivers industry-wide and network-wide projects.
-                </div>
-            </div>
-        </a>
-
-        <div style="clear: both;width: 100%;"></div>
-    </div>
-
+          </section>
 
 
     <script src="js/external/jquery.js"></script>
