changes to schedule

--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -137,7 +137,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img  alt="the hacktrain" class="light" style="width: 60%; padding:80px 0 80px" src="img/hackathon-hk-1/hacktrain-hk-logo-white.png"/>
+                        <img  alt="the hacktrain" class="light" style="width: 60%; padding:80px 0 10px" src="img/hackathon-hk-1/hacktrain-hk-logo-white.png"/>
                         <!-- <br><span style="font-size:15px">Powered by</span>
                         <span><img alt="hacktrain" src="img/hackathon-hk-1/mtr.png" style="width: 80px; margin-top: -10px" /></span>
                     </div> -->
@@ -145,7 +145,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <span style="font-size:25px; font-style:italic">Powered By </span>
-                        <span><img alt="hacktrain" src="img/hackathon-hk-1/mtr.png" style="width: 150px; margin-top: -10px; padding-left: 10px;" /></span>
+                        <span><img alt="hacktrain" src="img/hackathon-hk-1/mtr.png" style="width: 150px;  padding-left: 10px;" /></span>
                     </div>
                 </div>
             </div>
@@ -377,29 +377,66 @@
     <section name="journeys" id="journeys" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-md-8 col-md-offset-2">
-                <h1>Journeys</h1>
+                <h1>Schedule & Journeys</h1>
                 <hr/>
+   <p>
+        <h2 style="text-align: center;">
+            HackTrain HK will take place from the <i style="color:#219ab3;font-size:1.5em;">25th - 27th of November.</i></h3>
+    </p>
+                <style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:20px 20px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:20px 20px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg .tg-yw4l{vertical-align:top}
+@media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;margin: auto 0px;}}</style>
+<div class="tg-wrap"><table class="tg">
+  <tr>
+    <th class="tg-yw4l">Time</th>
+    <th class="tg-yw4l">Location</th>
+    <th class="tg-yw4l">What we'll be doing</th>
+  </tr>
+  <tr>
+    <th class="tg-yw4l">Friday - Evening</th>
+    <th class="tg-yw4l">MTR Headquarters, Kowloon Bay</th>
+    <th class="tg-yw4l">Hackers have opportunity to meet senior MTR stakeholders, learn about datasets available for the event and also receive more detail about challenges/theme of the competition.</th>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Friday - Night</td>
+    <td class="tg-yw4l">Marriot Hotel</td>
+    <td class="tg-yw4l">Participants pitch their ideas to each other. Best 10 ideas are carried forward to be developed during the hackathon. Team's sleep overnight at the Marriot Hotel in rooms.</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Saturday - Morning</td>
+    <td class="tg-yw4l">Tsim Sha Tsui Station</td>
+    <td class="tg-yw4l">Experience first hand some of the challenges that MTR staff and passengers face when using the network!</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Saturday - Afternoon</td>
+    <td class="tg-yw4l">Blueprint</td>
+    <td class="tg-yw4l">Begin hacking at one of Hong Kong's top coworking spaces! We will be joined by some amazing mentors from HK's rail + tech community.</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Saturday - Evening</td>
+    <td class="tg-yw4l">Travel to Lantau Island</td>
+    <td class="tg-yw4l">We'll be taking the MTR and cable car to one of HK's most famous highlands, Ngong Ping.</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Saturday - Night</td>
+    <td class="tg-yw4l">NP360 Village</td>
+    <td class="tg-yw4l">Work overnight at the top of Ngong Ping, near the Po Lin Monastery! Participants will be able to sleep over in the venue.</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Sunday - Morning</td>
+    <td class="tg-yw4l">Siu Ho Wan Train Depot</td>
+    <td class="tg-yw4l">Continue hacking at one of MTR's largest train depots! Participants will be able to see trains being worked on by MTR engineers whilst they work on their prototypes.</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Sunday - Afternoon</td>
+    <td class="tg-yw4l">MTR Operations Control Centre</td>
+    <td class="tg-yw4l">The OCC is the "heart" of MTR's train operations. For 24 hours a day, 7 days a week, staff keep close watch on every train and activity in the network to ensure the delivery of safe and reliable services passengers each day. HackTrain HK participants will have a chance to present their prototypes at this prestigious and highly advanced venue!</td>
+  </tr>
+</table></div>
 
-                    <p>
-                        <h2 style="text-align: center;">
-                        The HackTrain HK route will be announced <i style="color:#219ab3;font-size:1.5em;">soon!</i></h2>
-                    </p>
-
-                <div>
-
-                    <section id="about" class="content-section text-center">
-                        <div class="row">
-
-                            <div class="col-lg-8 col-lg-offset-2">
-                                <p>
-                                    The HackTrain will start in the heart of Hong Kong. The participants will then travel around Hong Kong via train and other modes of transport. Last year's participants in the HackTrain UK started at the St. Pancras Renaissance Hotel in London, and finished at the National Railway Museum in York.
-                                </p>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
-        </div>
         <div style="clear: both; width: 100%;"></div>
     </section>
 
