--- a/hackathon-hk-1.html
+++ b/hackathon-hk-1.html
@@ -391,9 +391,9 @@
 @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;margin: auto 0px;}}</style>
 <div class="tg-wrap"><table class="tg">
   <tr>
-    <th class="tg-yw4l">Time</th>
-    <th class="tg-yw4l">Location</th>
-    <th class="tg-yw4l">What we'll be doing</th>
+    <th class="tg-yw4l"><h2>Time</h2></th>
+    <th class="tg-yw4l"><h2>Location</h2></th>
+    <th class="tg-yw4l"><h2>What we'll be doing</h2></th>
   </tr>
   <tr>
     <th class="tg-yw4l">Friday - Evening</th>
